--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "http://iancooperman.github.io/lausd-password-generator",
+  "homepage": "http://iancooperman.github.io/salud-secure",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
