--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "random-word-slugs": "^0.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-kofi": "^0.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
